--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^3.2.4",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mysql": "^2.18.1",
