--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "async": "^3.2.4",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.7",
     "nodemon": "^2.0.18",
     "sequelize": "^6.21.2",
     "uuid": "^8.3.2"
